# Plasma

./: .gitignore  CMakeLists.txt  README.md  README.rst
Sources/Plasma/Apps/plClient/: CMakeLists.txt  plClient.cpp  plClient.h  winmain.cpp
Sources/Plasma/CoreLib/: HeadSpin.cpp  plViewTransform.cpp  plViewTransform.h
Sources/Plasma/FeatureLib/: CMakeLists.txt
Sources/Plasma/FeatureLib/inc/: pfAllCreatables.h
Sources/Plasma/FeatureLib/pfCamera/: CMakeLists.txt  plVirtualCamNeu.cpp  plVirtualCamNeu.h
Sources/Plasma/FeatureLib/pfConsole/: CMakeLists.txt  pfConsoleCommands.cpp
Sources/Plasma/FeatureLib/pfOculusRift/: CMakeLists.txt  pfRiftCamera.cpp  pfRiftCamera.h  pfRiftCreatable.h  plRiftCamera.cpp  plRiftCamera.h
Sources/Plasma/NucleusLib/inc/: plCreatableIndex.h  plPipeline.h
Sources/Plasma/NucleusLib/pnKeyedObject/: plFixedKey.cpp  plFixedKey.h
Sources/Plasma/PubUtilLib/: CMakeLists.txt
Sources/Plasma/PubUtilLib/inc/: plAllCreatables.h
Sources/Plasma/PubUtilLib/plPipeline/: CMakeLists.txt  D3DUtils.cpp  D3DUtils.h  plDXDeviceRefs.cpp  plDXPipeline.cpp  plDXPipeline.h  plDXRenderTargetRef.h  plRenderTarget.h  plStereoscopicUtils.cpp  plStereoscopicUtils.h
Sources/Plasma/PubUtilLib/plPostPipeline/: CMakeLists.txt  plPostPipeline.cpp  plPostPipeline.h  plPostPipelineCreatable.h
Sources/Plasma/PubUtilLib/plPostPipeline/Shadersrc/: ps_Passthrough.fx
Sources/Plasma/PubUtilLib/plSurface/: CMakeLists.txt  plShader.cpp  plShader.h  plShaderTable.cpp  plShaderTable.h  ps_BiasNormals.h  ps_CaddAAdd.h  ps_CaddAMult.h  ps_CaddAbase.h  ps_CalphaAMult.h  ps_CalphaAadd.h  ps_CalphaAbase.h  ps_CbaseAbase.h  ps_CmultAAdd.h  ps_CmultAMult.h  ps_CmultAbase.h  ps_CompCosines.h  ps_GrassShader.h  ps_MoreCosines.h  ps_Passthrough.h  ps_RiftDistortAssembly.h  ps_ShoreLeave6.h  ps_WaveDecEnv.h  ps_WaveFixed.h  ps_WaveGraph.h  ps_WaveGrid.h  ps_WaveRip.h  vs_BiasNormals.h  vs_CompCosines.h  vs_GrassShader.h  vs_Passthrough.h  vs_RiftDistortAssembly.h  vs_ShoreLeave6.h  vs_ShoreLeave7.h  (+14 more)
Sources/Tools/plShaderAssembler/: main.cpp
cmake/: FindLibOVR.cmake
(+15 files in other folders)
